kubernetes/components/networkpolicies/internal/allow-ingress-gateway-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-allow-ingress-gateway-internal
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: envoy-gateway
      podSelector:
        matchLabels:
          kubernetes.io/metadata.name: internal
